style: Fix the greeting page style on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,7 @@
 $outer-triangle-width: 35rem;
 $inner-triangle-width: 13rem;
-$outer-triangle-width-sm: 28rem;
-$inner-triangle-width-sm: 10rem;
+$outer-triangle-width-sm: 22rem;
+$inner-triangle-width-sm: 8rem;
 
 .mainContainer {
   width: 100%;
@@ -75,31 +75,32 @@ $inner-triangle-width-sm: 10rem;
 
 @media only screen and (max-width: 768px) {
   .greetingContainer {
-    left: -($outer-triangle-width-sm/2 - 2rem);
+    top: 2;
+    left: -($outer-triangle-width-sm/2 - 1rem);
     width: $outer-triangle-width-sm - 4rem;
   }  
 
   .outerTriangle {
-    --width: 28rem;
+    --width: 22rem;
   }
 
   .innerTriangle {
-    --width: 10rem;
+    --width: 8rem;
     top: (0.866*$outer-triangle-width-sm) - $inner-triangle-width-sm;
     left: ($outer-triangle-width-sm)-($inner-triangle-width-sm);
   }
 
   .greetingTxt {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   .greetingDescAbove {
     margin-top: 0.2rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
   
   .greetingDescBelow {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
   
 }
